--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project</title>
     <link href="styles.css" rel="stylesheet"/>
-    <script src="index.js" defer></script>
-    
 </head>
 <body>
-    
+    <h1>A Day in The Art Institute of Chicago</h1>
+    <p>
+        Have a day in Chicago? Visit the Art Institute and see some of its most famous works!
+    </p>
+
+    <div id="paint-collection"></div>
+    <script src="index.js"></script>
 </body>
 </html>
