adds button and event listener

--- a/index.html
+++ b/index.html
@@ -8,12 +8,23 @@
     <link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
-    <h1>A Day in The Art Institute of Chicago</h1>
-    <p>
-        Have a day in Chicago? Visit the Art Institute and see some of its most famous works!
-    </p>
+    <div>
+    <h1 id="header">A Day At The Art Institute of Chicago</h1>
+    <h2 id="header2">Have a day in Chicago? Visit the Art Institute and see some of its most famous works!</h2>
+    </div>
+
+
+    <div id="atc-picture">
+        <img src="https://a.cdn-hotels.com/gdcs/production65/d438/59a6fb2a-9e54-4589-81f2-764b1f4705be.jpg"/>
+        <button id="funFact">Fun Fact!</button>
+    </div>
+
 
     <div id="paint-collection"></div>
+
+
     <script src="index.js"></script>
+
+
 </body>
 </html>
