added functionality to more info buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div>
     <h1 id="header">A Day At The Art Institute of Chicago</h1>
-    <h2 id="header2">Have a day in Chicago? Visit the Art Institute and see some of its most famous works!</h2>
+    <h2 id="header2">Visit the Art Institute and see some of its most famous works!</h2>
     </div>
 
 
@@ -20,7 +20,7 @@
     </div>
 
 
-    <div id="paint-collection"></div>
+    <div id="paintings"></div>
 
 
     <script src="index.js"></script>
