added functionality to fun fact! button

--- a/index.html
+++ b/index.html
@@ -16,9 +16,23 @@
 
     <div id="atc-picture">
         <img src="https://a.cdn-hotels.com/gdcs/production65/d438/59a6fb2a-9e54-4589-81f2-764b1f4705be.jpg"/>
-        <button id="funFact">Fun Fact!</button>
     </div>
 
+    <div class="popup" id="popup-1">
+        <div class="overlay"></div>
+        <div class="content">
+            <div id="close-btn" class="close-btn">&times;
+    </div>
+        <h1>Fun Fact!</h1>
+        <p>
+            The collection of the Art Institute of Chicago covers more than 5,000 years 
+            of human expression from cultures around the world. The museum owns more than 260,000 works of art. The art 
+            institute holds works of art ranging from as early as the Japanese prints to the most updated American art. 
+        </p>
+    
+        </div>
+    </div>
+    <button id="funFact">Fun Fact!</button>
 
     <div id="paintings"></div>
 
