--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-    <h1 id="header">A Day At The Art Institute of Chicago</h1>
+    <h1 id="header1">A Day At The Art Institute of Chicago</h1>
     <h2 id="header2">Visit the Art Institute and see some of its most famous works!</h2>
     </div>
 
