added button with functionality

--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
 
     <div id="paintings"></div>
 
+
+    <div class="card">
+        <h2>The Art Institute of Chicago</h2>
+        <h3>111 South Michigan Avenue Chicago, Illinois 60603</h3>            
+        <img src="https://images.squarespace-cdn.com/content/v1/576ff8a0579fb3131645d76e/1501643099286-CAQVS991MEDTTAB1RP0H/image-asset.jpeg?format=1000w">
+        <p>
+            <li>
+                
+            </li>
+        </p>
+        <button id="button"> Double Click Me!</button>
+    </div>
+
     <script src="index.js"></script>
 
 
